
- MPR#7710: `ocamldep -sort` should exit with nonzero code in case of
  cyclic dependencies
  (Xavier Leroy, report by Mantis user baileyparker)

- GPR#1585: optimize output of "ocamllex -ml"
  (Alain Frisch, review by Frédéric Bour and Gabriel Scherer)

- MPR#7687: deprecate -thread option, which is equivalent to -I +threads.
  (Nicolás Ojeda Bär, report by Daniel Bünzli)

### Manual and documentation:

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

- GPR#1540: manual, decouple verbatim and toplevel style in code examples
  (Florian Angeletti, review by Gabriel Scherer)

- PR#7698, GPR#1545: improve wording in OCaml manual in several places,
  mostly in Chapter 1.  This addresses the easier changes suggested in the PR.
  (Jim Fehrle, review by Florian Angeletti and David Allsopp)

- GPR#1556: manual, add a consistency test for manual references inside
  the compiler source code.
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#1647: manual, subsection on record and variant disambiguation
  (Florian Angeletti, review by Alain Frisch and Gabriel Scherer)

### Compiler distribution build system

- MPR#7679: make sure .a files are erased before calling ar rc, otherwise
  leftover .a files from an earlier compilation may contain unwanted modules
  (Xavier Leroy)

### Internal/compiler-libs changes:

- GPR#1488, GPR#1560: Refreshing parmatch
  (Gabriel Scherer and Thomas Refis, review by Luc Maranget)

- GPR#1502: more command line options for expect tests
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#1511: show code at error location in expect-style tests,
  using new Location.show_code_at_location function
  (Gabriel Scherer and Armaël Guéneau,
   review by Valentin Gatien-Baron and Damien Doligez)

- GPR#1519, GPR#1532, GRP#1570: migrate tests to ocamltest
  (Sébastien Hinderer, review by Gabriel Scherer, Valentin Gatien-Baron
  and Nicolás Ojeda Bär)
