@@ -20,6 +20,11 @@ val program_name : string ref
 val socket_name : string ref
 val arguments : string ref
 val default_load_path : string list ref
+val breakpoint : bool ref
+val prompt : bool ref
+val time : bool ref
+val version : bool ref
+val topdirs_path : string ref
 
 val add_path : string -> unit
 val add_path_for : string -> string -> unit
